--- a/embedd.ipynb
+++ b/embedd.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,17 +11,7 @@
     "dataset = pd.read_csv(\"arxiv_abstracts.csv\")\n",
     "\n",
     "abstracts = dataset[\"Abstract\"]\n",
-    "abstracts.to_csv(\"abstracts.csv\")\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import pandas as pd\n",
-    "\n",
+    "abstracts.to_csv(\"abstracts.csv\")\n",
     "abstracts = pd.read_csv(\"abstracts.csv\")"
    ]
   },
@@ -34,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,15 +47,8 @@
     "    abstracts.drop(columns=[\"Abstract\", \"Unnamed: 0\"], inplace=True)\n",
     "    abstracts.to_csv(\"cleaned_abstracts.csv\", index=False)\n",
     "else:\n",
-    "    print(\"Error: Column 'Abstract' not found in the data.\")\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "    print(\"Error: Column 'Abstract' not found in the data.\")\n",
+    "\n",
     "cleaned_abstracts = pd.read_csv(\"cleaned_abstracts.csv\")\n",
     "cleaned_abstracts_list = cleaned_abstracts[\"Cleaned abstract\"].tolist()"
    ]
@@ -79,10 +62,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
+    "#!pip install git+https://github.com/huggingface/transformers.git -q"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import torch\n",
     "from transformers import ModernBertModel, ModernBertConfig\n",
     "\n",
     "# Initializing a ModernBert style configuration\n",
@@ -94,30 +87,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
     "from transformers import AutoTokenizer\n",
-    "import torch\n",
     "\n",
     "model_id = \"answerdotai/ModernBERT-base\"\n",
     "tokenizer = AutoTokenizer.from_pretrained(model_id)\n",
     "\n",
     "def modernbert_embedding(text):\n",
     "    inputs = tokenizer(text, return_tensors=\"pt\", padding=True)\n",
-    "    \n",
     "    with torch.no_grad():\n",
     "        outputs = model(**inputs)\n",
-    "        \n",
-    "    token_embeddings = outputs.last_hidden_state  # shape: (batch_size, seq_length, hidden_size)\n",
-    "\n",
+    "    token_embeddings = outputs.last_hidden_state.mean(1) # (batch_size, seq_length, hidden_size) -> (batch_size, hidden_size)\n",
     "    return token_embeddings"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -478,10 +467,10 @@
     }
    ],
    "source": [
-    "import os \n",
+    "import os\n",
+    "\n",
     "batch_size = 16\n",
     "os.makedirs(\"embeddings\", exist_ok=True)\n",
-    "\n",
     "\n",
     "for i in range(0, len(cleaned_abstracts_list), batch_size):\n",
     "    batch = cleaned_abstracts_list[i:i + batch_size]\n",
@@ -490,11 +479,18 @@
     "    torch.save(batch_embeddings, batch_file_path)\n",
     "    print(f\"Processed batch {i // batch_size + 1}/{len(cleaned_abstracts_list) // batch_size + 1}\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "research-design",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -508,9 +504,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.11"
+   "version": "3.12.7"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
