--- a/clustering_algorithms/hdb_scan.ipynb
+++ b/clustering_algorithms/hdb_scan.ipynb
@@ -150,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -170,7 +170,7 @@
     "hdbscan_cluster = hdbscan.HDBSCAN(min_samples=5, min_cluster_size=30)\n",
     "cluster_labels_hdb = hdbscan_cluster.fit_predict(scaled_embeddings)\n",
     "plot_clusters(cluster_labels_hdb, 'HDBSCAN clustering')\n",
-    "np.save('cluster_labels_ddb.npy', cluster_labels_hdb)\n"
+    "np.save('cluster_labels_hdb.npy', cluster_labels_hdb)\n"
    ]
   },
   {
