--- a/process_embeddings.ipynb
+++ b/process_embeddings.ipynb
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 42,
    "id": "d745405e-d9ea-4910-aa97-6bebff1b3b2a",
    "metadata": {},
    "outputs": [
@@ -79,7 +79,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 350/350 [01:16<00:00,  4.57it/s]\n"
+      "100%|██████████| 350/350 [01:27<00:00,  3.99it/s]\n"
      ]
     },
     {
@@ -88,7 +88,7 @@
        "(5588, 2)"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -149,6 +149,65 @@
   },
   {
    "cell_type": "markdown",
+   "id": "4fa2c75f-6560-41d3-9115-6bdc345d6279",
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
+   "source": [
+    "# CLS token approach"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "f517cd39-22f3-481a-94e2-c0ff7b7cc552",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/var/folders/nz/6cp76bzd2_b0frljxrh_r74w0000gn/T/ipykernel_22213/2743058110.py:15: FutureWarning: You are using `torch.load` with `weights_only=False` (the current default value), which uses the default pickle module implicitly. It is possible to construct malicious pickle data which will execute arbitrary code during unpickling (See https://github.com/pytorch/pytorch/blob/main/SECURITY.md#untrusted-models for more details). In a future release, the default value for `weights_only` will be flipped to `True`. This limits the functions that could be executed during unpickling. Arbitrary objects will no longer be allowed to be loaded via this mode unless they are explicitly allowlisted by the user via `torch.serialization.add_safe_globals`. We recommend you start setting `weights_only=True` for any use case where you don't have full control of the loaded file. Please open an issue on GitHub for any issues related to this experimental feature.\n",
+      "  embedding = torch.load(file_path)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "(5588, 768)"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import os\n",
+    "import torch\n",
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "\n",
+    "# Path to the directory containing the embeddings files\n",
+    "directory = \"embeddings\"\n",
+    "files = [f for f in os.listdir(directory) if f.startswith(\"batch_\") and f.endswith(\".pt\")]\n",
+    "files.sort(key=lambda x: int(x.split(\"_\")[1].split(\".\")[0]))\n",
+    "\n",
+    "# Load all embeddings and concatenate them into a single tensor\n",
+    "embeddings = []\n",
+    "for file in files:\n",
+    "    file_path = os.path.join(directory, file)\n",
+    "    embedding = torch.load(file_path)\n",
+    "    embeddings.append(embedding[:,0,:]) # (batch size, sequence length, embedding dim) -> (batch size, embedding dim)\n",
+    "\n",
+    "# Concatenate all tensors\n",
+    "embeddings = torch.cat(embeddings, dim=0).detach().numpy()\n",
+    "np.save(directory + \"/embedding_tensor\", embeddings)\n",
+    "embeddings.shape"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "b889416f-720a-40bf-a314-396fdf081462",
    "metadata": {},
    "source": [
@@ -157,7 +216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 2,
    "id": "c7f25653-50ed-40f9-a353-e6ba46e337a5",
    "metadata": {},
    "outputs": [
@@ -165,7 +224,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 350/350 [02:19<00:00,  2.51it/s]\n"
+      "100%|██████████| 350/350 [02:12<00:00,  2.65it/s]\n"
      ]
     },
     {
@@ -174,7 +233,7 @@
        "(5588, 30)"
       ]
      },
-     "execution_count": 102,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -236,139 +295,6 @@
     "# Save the final PCA-transformed embeddings\n",
     "np.save(os.path.join(directory, \"pca_embeddings.npy\"), pca_embeddings)\n",
     "pca_embeddings.shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 129,
-   "id": "f74cf6d9-9f51-4eb7-9d62-8c6768ae244f",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([0.20459254, 0.05971602, 0.01921128, 0.01789809, 0.01423955,\n",
-       "       0.01298136, 0.0119982 , 0.01121688, 0.01004734, 0.0090596 ,\n",
-       "       0.0080756 , 0.00794445, 0.00745439, 0.00686823, 0.00671401,\n",
-       "       0.00649655, 0.00615243, 0.00590807, 0.00574084, 0.00557331,\n",
-       "       0.00524395, 0.00516464, 0.00493555, 0.00487621, 0.00455986,\n",
-       "       0.00443784, 0.00427098, 0.00416504, 0.00402431, 0.00389037],\n",
-       "      dtype=float32)"
-      ]
-     },
-     "execution_count": 129,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "pca_seq.explained_variance_ratio_.sum(), pca_global.explained_variance_ratio_.sum()\n",
-    "pca_global.explained_variance_ratio_"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "d1fccc85-7f78-41f0-804a-c7fd42d372df",
-   "metadata": {
-    "jp-MarkdownHeadingCollapsed": true
-   },
-   "source": [
-    "# Hierarchical PCA with asyncio"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 56,
-   "id": "be79dcc9-1669-4094-ae22-561b1287b971",
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "RuntimeError",
-     "evalue": "asyncio.run() cannot be called from a running event loop",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mRuntimeError\u001b[0m                              Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[56], line 73\u001b[0m\n\u001b[1;32m     71\u001b[0m \u001b[38;5;66;03m# Run the async main function\u001b[39;00m\n\u001b[1;32m     72\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;18m__name__\u001b[39m \u001b[38;5;241m==\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m__main__\u001b[39m\u001b[38;5;124m\"\u001b[39m:\n\u001b[0;32m---> 73\u001b[0m     asyncio\u001b[38;5;241m.\u001b[39mrun(main())\n",
-      "File \u001b[0;32m/opt/anaconda3/lib/python3.12/asyncio/runners.py:190\u001b[0m, in \u001b[0;36mrun\u001b[0;34m(main, debug, loop_factory)\u001b[0m\n\u001b[1;32m    161\u001b[0m \u001b[38;5;250m\u001b[39m\u001b[38;5;124;03m\"\"\"Execute the coroutine and return the result.\u001b[39;00m\n\u001b[1;32m    162\u001b[0m \n\u001b[1;32m    163\u001b[0m \u001b[38;5;124;03mThis function runs the passed coroutine, taking care of\u001b[39;00m\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m    186\u001b[0m \u001b[38;5;124;03m    asyncio.run(main())\u001b[39;00m\n\u001b[1;32m    187\u001b[0m \u001b[38;5;124;03m\"\"\"\u001b[39;00m\n\u001b[1;32m    188\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m events\u001b[38;5;241m.\u001b[39m_get_running_loop() \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m:\n\u001b[1;32m    189\u001b[0m     \u001b[38;5;66;03m# fail fast with short traceback\u001b[39;00m\n\u001b[0;32m--> 190\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mRuntimeError\u001b[39;00m(\n\u001b[1;32m    191\u001b[0m         \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124masyncio.run() cannot be called from a running event loop\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m    193\u001b[0m \u001b[38;5;28;01mwith\u001b[39;00m Runner(debug\u001b[38;5;241m=\u001b[39mdebug, loop_factory\u001b[38;5;241m=\u001b[39mloop_factory) \u001b[38;5;28;01mas\u001b[39;00m runner:\n\u001b[1;32m    194\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m runner\u001b[38;5;241m.\u001b[39mrun(main)\n",
-      "\u001b[0;31mRuntimeError\u001b[0m: asyncio.run() cannot be called from a running event loop"
-     ]
-    }
-   ],
-   "source": [
-    "import os\n",
-    "import torch\n",
-    "import numpy as np\n",
-    "import pandas as pd\n",
-    "from tqdm import tqdm\n",
-    "from sklearn.decomposition import PCA\n",
-    "import asyncio\n",
-    "\n",
-    "# Path to the directory containing the embeddings files\n",
-    "directory = \"embeddings\"\n",
-    "files = [f for f in os.listdir(directory) if f.startswith(\"batch_\") and f.endswith(\".pt\")]\n",
-    "files.sort(key=lambda x: int(x.split(\"_\")[1].split(\".\")[0]))\n",
-    "\n",
-    "# Configurations\n",
-    "seq_pca_dim = 2  # Number of principal components to keep for the sequence dimension, preserves about 90% of information\n",
-    "final_pca_dim = 2  # Number of global PCA dimensions to reduce to\n",
-    "\n",
-    "# Collect intermediate PCA-transformed data\n",
-    "all_intermediate_embeddings = []\n",
-    "\n",
-    "async def process_file(file, loop):\n",
-    "    # Use run_in_executor to offload CPU-bound tasks to threads\n",
-    "    file_path = os.path.join(directory, file)\n",
-    "    embedding = await loop.run_in_executor(None, torch.load, file_path, {'weights_only': True})\n",
-    "    # shape: (batch_size, seq_len, embedding_dim)\n",
-    "\n",
-    "    batch_size = embedding.shape[0]\n",
-    "    seq_len = embedding.shape[1]\n",
-    "    embed_dim = embedding.shape[2]\n",
-    "\n",
-    "    # Store the PCA-transformed sequence for the entire batch\n",
-    "    intermediate_batch = []\n",
-    "    for i in range(batch_size):\n",
-    "        # shape: (seq_len, embed_dim)\n",
-    "        sample = embedding[i].cpu().numpy()\n",
-    "        # shape: (embed_dim, seq_len)\n",
-    "        sample = sample.T\n",
-    "\n",
-    "        # PCA across the sequence length dimension -> seq_pca_dim principal components\n",
-    "        pca_seq = PCA(n_components=seq_pca_dim)\n",
-    "        seq_transformed = await loop.run_in_executor(None, pca_seq.fit_transform, sample)\n",
-    "        # shape: (embed_dim, seq_pca_dim)\n",
-    "\n",
-    "        # Flatten the reduced sequence embedding: shape (seq_pca_dim * embedding_dim,)\n",
-    "        intermediate_batch.append(seq_transformed.flatten())\n",
-    "\n",
-    "    # Stack to get shape (batch_size, seq_pca_dim * embed_dim)\n",
-    "    intermediate_batch = np.stack(intermediate_batch, axis=0)\n",
-    "    return intermediate_batch\n",
-    "\n",
-    "async def main():\n",
-    "    loop = asyncio.get_event_loop()\n",
-    "    tasks = [process_file(file, loop) for file in files]\n",
-    "    # Use tqdm to show progress\n",
-    "    for task in tqdm(asyncio.as_completed(tasks), total=len(tasks)):\n",
-    "        intermediate_batch = await task\n",
-    "        all_intermediate_embeddings.append(intermediate_batch)\n",
-    "\n",
-    "    # Concatenate all intermediate PCA-collapsed batches -> shape (N, seq_pca_dim * embedding_dim)\n",
-    "    all_intermediate_embeddings = np.concatenate(all_intermediate_embeddings, axis=0)\n",
-    "\n",
-    "    # Global PCA on the sequence-compressed embeddings -> final_pca_dim\n",
-    "    pca_global = PCA(n_components=final_pca_dim)\n",
-    "    pca_embeddings = await loop.run_in_executor(None, pca_global.fit_transform, all_intermediate_embeddings)\n",
-    "    # shape: (N, final_pca_dim)\n",
-    "\n",
-    "    # Save the final PCA-transformed embeddings\n",
-    "    np.save(os.path.join(directory, \"pca_embeddings.npy\"), pca_embeddings)\n",
-    "    print(pca_embeddings.shape)\n",
-    "\n",
-    "# Run the async main function\n",
-    "if __name__ == \"__main__\":\n",
-    "    asyncio.run(main())"
    ]
   },
   {
